# CabbageHardware

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Examples/: CMakeLists.txt  compute.glsl  frag.glsl  main.cpp  vert.glsl
Examples/TestCase/: compute.glsl  frag.glsl  vert.glsl
SourceCode/: main.cpp
SourceCode/CabbageFramework/: CabbageEngine.cpp  CabbageEngine.h  CabbageGlobalContext.h
SourceCode/CabbageFramework/CabbageAssets/: AssetsManager.h  ModelImporter.cpp  ModelImporter.h  SceneManager.h
SourceCode/CabbageFramework/CabbageCommon/: CabbageCommon.h  ReflectionCPP.h  SourceFilesPath.cpp  SourceFilesPath.h
SourceCode/CabbageFramework/CabbageCommon/ShaderCodeCompiler/: ShaderCodeCompiler.h  ShaderHardcodeManager.h  ShaderLanguageConverter.h
SourceCode/CabbageFramework/CabbageCommon/ShaderCodeCompiler/HardcodeShaders/: HardcodeShadersGLSL.cpp  HardcodeShadersSpirV.cpp
SourceCode/CabbageFramework/CabbageFoundation/: CabbageFramework.cpp  CabbageFramework.h  HardwareContext.h
SourceCode/CabbageFramework/CabbageFoundation/HardwareManager/: DeviceManager.cpp  DeviceManager.h  DisplayManager.cpp  ResourceManager.cpp  ResourceManager.h
SourceCode/CabbageFramework/CabbageFoundation/PipelineManager/: ComputePipeline.cpp  ComputePipeline.h  RasterizerPipeline.cpp  RasterizerPipeline.h
SourceCode/CabbageFramework/CabbageFoundation/ShaderCodeCompiler/: ShaderCodeCompiler.cpp  ShaderCodeCompiler.h  ShaderHardcodeManager.cpp  ShaderHardcodeManager.h  ShaderLanguageConverter.cpp
SourceCode/CabbageFramework/CabbageFoundation/ShaderCodeCompiler/HardcodeShaders/: HardcodeShaders.h  HardcodeShadersGLSL.cpp  HardcodeShadersHLSL.cpp  HardcodeShadersSpirV.cpp
SourceCode/CabbageFramework/CabbageMultimedia/CabbageAnimation/: CabbageAnimator.h  PhysicalSimulator.h
SourceCode/CabbageFramework/CabbageMultimedia/shaders/: comp.glsl  test.comp.glsl  test.frag.glsl  test.vert.glsl
SourceCode/CabbageHardware/: CabbageFramework.h  HardwareContext.cpp
SourceCode/CabbageHardware/HardwareManager/: DeviceFeaturesChain.cpp  DeviceManager.h
Src/: CMakeLists.txt  CabbageDisplayer.h  CabbageFramework.cpp  CabbageFramework.h  HardwareContext.h  HardwareExecutor.cpp  HardwareExecutor.h  main.cpp
Src/Display/: DisplayManager.cpp  DisplayManager.h  HardwareDisplayer.cpp
Src/Hardware/: DeviceManager.cpp  DeviceManager.h  FeaturesChain.cpp  FeaturesChain.h  GlobalContext.cpp  GlobalContext.h  HardwareContext.h  ResourceManager.cpp  ResourceManager.h
Src/Hardware/PipelineManager/: ComputePipeline.h
Src/HardwareManager/: DeviceManager.h  DisplayManager.cpp  DisplayManager.h  GlobalContext.cpp  GlobalContext.h  ResourceManager.cpp
Src/Pipeline/: ComputePipeline.cpp  ComputePipeline.h  RasterizerPipeline.cpp  RasterizerPipeline.h
Src/PipelineManager/: ComputePipeline.cpp  ComputePipeline.h  RasterizerPipeline.cpp  RasterizerPipeline.h
Src/Resource/: HardwareBuffer.cpp  HardwareImage.cpp  HardwarePushConstant.cpp
